--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -4,9 +4,9 @@
 
 #=================== Global configuration ============#
 url=https://www.gsmarena.com
-capabilities.browserName=NULL
-capabilities.browserVersion=NULL
-#selenium_url=http://localhost:4444/wd/hub
+capabilities.browserName=firefox
+capabilities.browserVersion=Null
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -27,8 +27,8 @@ language=en_US
 #=====================================================#
 
 #============== WebDriver configuration ==============#
-explicit_timeout=20
-retry_interval=5
+explicit_timeout=100
+retry_interval=25
 thread-count=1
 #=====================================================#
 
