--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,8 +3,9 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-url=https://www.gsmarena.com
-capabilities.browserName=firefox
+url=https://www.onliner.by
+#url=https://www.gsmarena.com
+capabilities.browserName=chrome
 capabilities.browserVersion=Null
 selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
@@ -14,7 +15,7 @@ app_version=
 
 #=============== Environment configuration ===========#
 env=DEMO
-DEMO.base=https://www.gsmarena.com
+DEMO.base=
 DEMO.api_url=https://jsonplaceholder.typicode.com
 STAG.api_url=
 #=====================================================#
@@ -27,8 +28,8 @@ language=en_US
 #=====================================================#
 
 #============== WebDriver configuration ==============#
-explicit_timeout=100
-retry_interval=25
+explicit_timeout=80
+retry_interval=20
 thread-count=1
 #=====================================================#
 
