--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 	</repositories>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.azure/azure-storage-blob -->
+		<dependency>
+    		<groupId>com.azure</groupId>
+    		<artifactId>azure-storage-blob</artifactId>
+    		<version>12.13.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.qaprosoft</groupId>
 			<artifactId>carina-core</artifactId>
