--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -16,7 +16,8 @@ app_version=
 #=============== Environment configuration ===========#
 env=DEMO
 DEMO.base=
-DEMO.api_url=https://jsonplaceholder.typicode.com
+#DEMO.api_url=https://jsonplaceholder.typicode.com
+DEMO.api_url=https://api.openweathermap.org/
 STAG.api_url=
 #=====================================================#
 
