--- a/src/main/resources/_api.properties
+++ b/src/main/resources/_api.properties
@@ -8,5 +8,9 @@ PutPostsMethod=PUT:${base_url}/posts/1
 PatchPostsMethod=PATCH:${base_url}/posts/1
 
 GetWeatherMethod=GET:${base_url}/data/2.5/weather?/
-
-
+GetWeatherMethodById=GET:${base_url}/data/2.5/weather?/
+GetWeatherMethodByLonLat=GET:${base_url}/data/2.5/weather?/
+GetWeatherBboxMethod=GET:${base_url}/data/2.5/box/city?/
+GetWeatherCircleMethod=GET:${base_url}/data/2.5/find?/
+GetWeatherOneApiCallMethod=GET:${base_url}/data/2.5/onecall?/
+GetForecastMethod=GET:${base_url}/data/2.5/forecast?/
