--- a/src/main/resources/_api.properties
+++ b/src/main/resources/_api.properties
@@ -14,3 +14,4 @@ GetWeatherBboxMethod=GET:${base_url}/data/2.5/box/city?/
 GetWeatherCircleMethod=GET:${base_url}/data/2.5/find?/
 GetWeatherOneApiCallMethod=GET:${base_url}/data/2.5/onecall?/
 GetForecastMethod=GET:${base_url}/data/2.5/forecast?/
+GetWeatherAlgoMethod=GET:${base_url}/data/2.5/weather?/
