--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -5,9 +5,9 @@
 #=================== Global configuration ============#
 url=https://www.onliner.by
 #url=https://www.gsmarena.com
-capabilities.browserName=NULL
+capabilities.browserName=firefox
 capabilities.browserVersion=Null
-#selenium_url=http://localhost:4444/wd/hub
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -36,17 +36,17 @@ thread-count=1
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-selenium_url=http://localhost:4723/wd/hub
-capabilities.automationName=uiautomator2
+#!selenium_url=http://localhost:4723/wd/hub
+#!capabilities.automationName=uiautomator2
 #capabilities.deviceName=Samsung_Galaxy_A71
-capabilities.deviceName=Pixel_5_API_30
+#!capabilities.deviceName=Pixel_5_API_30
 #capabilities.udid=<phone_udid>
-capabilities.udid=emulator-5554
-capabilities.deviceType=phone
-capabilities.platformName=ANDROID
+#!capabilities.udid=emulator-5554
+#!capabilities.deviceType=phone
+#!capabilities.platformName=ANDROID
 #capabilities.app=/Applications/tools/appium/carinademoexample.apk
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
-capabilities.app=/Applications/tools/appium/Calculator.apk
+#!capabilities.app=/Applications/tools/appium/Calculator.apk
 
 
 #=====================================================#
