IvanSnytko fixes 2,7,9 added

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -5,8 +5,11 @@
 #=================== Global configuration ============#
 url=https://www.onliner.by
 #url=https://www.gsmarena.com
+#!
 capabilities.browserName=firefox
+#capabilities.browserName=NULL
 capabilities.browserVersion=Null
+#!
 selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
@@ -44,7 +47,7 @@ thread-count=1
 #!capabilities.udid=emulator-5554
 #!capabilities.deviceType=phone
 #!capabilities.platformName=ANDROID
-#capabilities.app=/Applications/tools/appium/carinademoexample.apk
+#!capabilities.app=/Applications/tools/appium/carinademoexample.apk
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
 #!capabilities.app=/Applications/tools/appium/Calculator.apk
 
